--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </div>
 
       <div class="col-md-4 py-3 py-md-0 mt-5">
-        <div class="shadow" style="width: 18rem;">
+        <div class="shadow w-40">
           <div class="card-body">
             <i class="bi bi-file-earmark-text" style="font-size:45px;color:blue;text-shadow:2px 2px 4px #000000;"></i>
             <h4 class="card-title"><b>Predictable pricing</b></h4>
@@ -142,7 +142,7 @@
 
 
       <div class="col-md-4 py-3 py-md-0 mt-5">
-        <div class="shadow" style="width: 18rem;">
+        <div class="shadow w-40">
           <div class="card-body">
             <i class="bi bi-stop-circle" style="font-size:45px;color:blue;text-shadow:2px 2px 4px #000000;"></i>
             <h4 class="card-title"><b>World-Class service</b></h4>
@@ -154,7 +154,7 @@
 
 
       <div class="col-md-4 py-3 py-md-0 mt-5">
-        <div class="shadow" style="width: 18rem;">
+        <div class="shadow w-40">
           <div class="card-body">
             <i class="bi bi-shield" style="font-size:45px;color:blue;text-shadow:2px 2px 4px #000000;"></i>
             <h4 class="card-title"><b>Reliable Platform</b></h4>
@@ -174,7 +174,7 @@
         <h1 class="text-center">Products</h1>
       </div>
       <div class="col-md-3 mt-5 text-center">
-        <div class="shadow" style="width: 16rem;">
+        <div class="shadow">
           <div class="card-body">
             <i class="bi bi-cloud" style="font-size:45px;color:blue;text-shadow:2px 2px 4px #000000;"></i>
             <h4 class="card-title"><b>Startup</b></h4>
@@ -185,7 +185,7 @@
       </div>
 
       <div class="col-md-3 mt-5 text-center">
-        <div class="shadow" style="width: 16rem;">
+        <div class="shadow">
           <div class="card-body">
             <i class="bi bi-cloud" style="font-size:45px;color:blue;text-shadow:2px 2px 4px #000000;"></i>
             <h4 class="card-title"><b>Advanced</b></h4>
@@ -196,7 +196,7 @@
       </div>
 
       <div class="col-md-3 mt-5 text-center">
-        <div class="shadow" style="width: 16rem;">
+        <div class="shadow">
           <div class="card-body">
             <i class="bi bi-cloud" style="font-size:45px;color:blue;text-shadow:2px 2px 4px #000000;"></i>
             <h4 class="card-title"><b>Business</b></h4>
@@ -207,7 +207,7 @@
       </div>
 
       <div class="col-md-3 mt-5 text-center">
-        <div class="shadow" style="width: 16rem;">
+        <div class="shadow">
           <div class="card-body">
             <i class="bi bi-cloud" style="font-size:45px;color:blue;text-shadow:2px 2px 4px #000000;"></i>
             <h4 class="card-title"><b>Enterprise</b></h4>
@@ -233,7 +233,7 @@
         <h1 class="text-center text-white">Statistics</h1>
       </div>
       <div class="col-md-3 mt-5 text-center">
-        <div class="shadow" style="width: 16rem;">
+        <div class="shadow">
           <div class="card-body bg-info">
             <i class="bi bi-inbox" style="font-size:45px;color:white;text-shadow:2px 2px 4px #000000;"></i>
             <h4 class="card-title text-white"><b>12</b></h4>
@@ -243,7 +243,7 @@
       </div>
 
       <div class="col-md-3 mt-5 text-center">
-        <div class="shadow" style="width: 16rem;">
+        <div class="shadow">
           <div class="card-body bg-info">
             <i class="bi bi-box" style="font-size:45px;color:white;text-shadow:2px 2px 4px #000000;"></i>
             <h4 class="card-title text-white"><b>+1M</b></h4>
@@ -253,7 +253,7 @@
       </div>
 
       <div class="col-md-3 mt-5 text-center">
-        <div class="shadow" style="width: 16rem;">
+        <div class="shadow">
           <div class="card-body bg-info">
             <i class="bi bi-globe2" style="font-size:45px;color:white;text-shadow:2px 2px 4px #000000;"></i>
             <h4 class="card-title text-white"><b>195</b></h4>
@@ -263,7 +263,7 @@
       </div>
 
       <div class="col-md-3 mt-5 text-center">
-        <div class="shadow" style="width: 16rem;">
+        <div class="shadow">
           <div class="card-body bg-info">
             <i class="bi bi-droplet" style="font-size:45px;color:white;text-shadow:2px 2px 4px #000000;"></i>
             <h4 class="card-title text-white"><b>78M</b></h4>
@@ -285,7 +285,7 @@
         <h1 class="text-center">Testimonials</h1>
       </div>
       <div class="col-md-4 mt-5">
-        <div class="shadow" style="width: 22rem;">
+        <div class="shadow">
           <div class="card-body">
             <p class="card-text text-muted">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
           </div>
@@ -305,7 +305,7 @@
 
 
       <div class="col-md-4 mt-5">
-        <div class="shadow" style="width: 22rem;">
+        <div class="shadow">
           <div class="card-body">
             <p class="card-text text-muted">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
           </div>
@@ -324,7 +324,7 @@
 
 
       <div class="col-md-4 mt-5">
-        <div class="shadow" style="width: 22rem;">
+        <div class="shadow">
           <div class="card-body">
             <p class="card-text text-muted">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
           </div>
